feat: create unit tests and mocks

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,9 +21,10 @@
     "noFallthroughCasesInSwitch": true,
 
     "baseUrl": ".",
+    "types": ["vitest/globals"],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "test"]
 }
